vlib/v/checker/tests/fn_selector_expr_err.out
vlib/v/checker/tests/fn_selector_expr_err.vv:1:26: error: `println('Hello, World!')` does not return value so has no fields
    1 | println('Hello, World!').whatever
      |                          ~~~~~~~~
